--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pcl_ros
-	base = 18c183d
-	trimbase = 
+	base = e5fcf2e
+	trimbase = 18c183d
 	parent = upstream
 	previous = fd7c969
