--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception_pcl
-	base = d6398ee
-	trimbase = 
+	base = 6530bb8
+	trimbase = d6398ee
 	parent = upstream
 	previous = fd7c969
