--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5fcf2e
+	base = 8acd788
 	trimbase = 
 	parent = release/kinetic/pcl_ros
-	previous = 
+	previous = e5fcf2e
