--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8cd1d07
+	base = b5185bc
 	trimbase = 
 	parent = arch/kinetic/pcl_ros
-	previous = 
+	previous = 8cd1d07
