--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6530bb8
+	base = 1ca137e
 	trimbase = 
 	parent = release/kinetic/perception_pcl
-	previous = 
+	previous = 6530bb8
