--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 49e2c32
+	base = 97be018
 	trimbase = 
 	parent = arch/kinetic/perception_pcl
-	previous = 
+	previous = 49e2c32
