--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pcl_ros
-	base = 8fced37
-	trimbase = 
+	base = 35a9b28
+	trimbase = 8fced37
 	parent = upstream
 	previous = a97c885
