--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception_pcl
-	base = 99f3d0d
-	trimbase = 
+	base = fc04bd4
+	trimbase = 99f3d0d
 	parent = upstream
 	previous = a97c885
