--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc04bd4
+	base = a14e9b9
 	trimbase = 
 	parent = release/lunar/perception_pcl
-	previous = 
+	previous = fc04bd4
