--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35a9b28
+	base = 2f721cd
 	trimbase = 
 	parent = release/lunar/pcl_ros
-	previous = 
+	previous = 35a9b28
