--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e057ce4
+	base = 4c31b4b
 	trimbase = 
 	parent = arch/lunar/pcl_ros
-	previous = 
+	previous = e057ce4
